board member page

--- a/columns.html
+++ b/columns.html
@@ -321,9 +321,7 @@
                                 <div class="corzo-navigation corzo-item-pdlr clearfix">
                                     <div class="corzo-main-menu" id="corzo-main-menu">
                                         <ul id="menu-main-navigation-1" class="sf-menu">
-                                            <li
-                                                class="menu-item menu-item-home menu-item-has-children corzo-normal-menu"
-                                            >
+                                            <li class="menu-item menu-item-home menu-item-has-children corzo-normal-menu">
                                                 <a href="index.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item menu-item-home" data-size="60">
@@ -580,6 +578,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="corzo-page-wrapper" id="corzo-page-wrapper">
                     <div class="gdlr-core-page-builder-body">
                         <div class="gdlr-core-pbf-wrapper" style="padding: 90px 0px 0px 0px;">
@@ -593,6 +592,7 @@
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
                                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js" style="padding: 0px 20px 0px 0px;">
                                             <div class="gdlr-core-pbf-background-wrap"></div>
@@ -611,6 +611,7 @@
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="gdlr-core-pbf-column gdlr-core-column-30">
                                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js" style="padding: 0px 40px 0px 0px;">
                                             <div class="gdlr-core-pbf-background-wrap"></div>
@@ -629,9 +630,11 @@
                                             </div>
                                         </div>
                                     </div>
+
                                 </div>
                             </div>
                         </div>
+
                         <div class="gdlr-core-pbf-wrapper" style="padding: 40px 0px 0px 0px;">
                             <div class="gdlr-core-pbf-background-wrap"></div>
                             <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
@@ -679,6 +682,7 @@
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="gdlr-core-pbf-column gdlr-core-column-20">
                                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js" style="padding: 0px 20px 0px 0px;">
                                             <div class="gdlr-core-pbf-background-wrap"></div>
@@ -700,6 +704,8 @@
                                 </div>
                             </div>
                         </div>
+
+
                         <div class="gdlr-core-pbf-wrapper" style="padding: 40px 0px 0px 0px;">
                             <div class="gdlr-core-pbf-background-wrap"></div>
                             <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
