--- a/insurance.html
+++ b/insurance.html
@@ -78,13 +78,22 @@
                                             <li class="menu-item"><a href="#">Investment Research</a></li>
                                         </ul>
                                     </li>
+
+                                    <li class="menu-item menu-item-has-children">
+                                        <a href="#">Client Center</a>
+                                    </li>
+                                    <li class="menu-item menu-item-has-children">
+                                        <a href="smart-manufacturing.html">Research</a>
+                                    </li>
+
 <!--                                    <li class="menu-item menu-item-has-children">-->
 <!--                                        <a href="faq.html">FAQs</a>-->
 
 <!--                                    </li>-->
+
+
                                     <li class="menu-item menu-item-has-children">
                                         <a href="contact-3.html">Contact Us</a>
-
                                     </li>
                                 </ul>
                             </div>
@@ -112,12 +121,12 @@
                                         <i class="fa5s fa5-envelope-open" style="font-size: 19px; color: #f7821e; margin-left: 20px; margin-right: 10px;"></i>
                                         <a href="mailto: info@constantcap.com.gh" class="__cf_email__">info@constantcap.com.gh</a>
                                     </div>
+
                                     <div class="corzo-top-bar-right-social">
-                                        <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="facebook"><i class="fa fa-facebook"></i></a>
-                                        <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="linkedin"><i class="fa fa-linkedin"></i></a>
-                                        <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="pinterest"><i class="fa fa-pinterest-p"></i></a>
-                                        <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="twitter"><i class="fa fa-twitter"></i></a>
-                                        <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="instagram"><i class="fa fa-instagram"></i></a>
+                                        <a href="https://www.facebook.com/constantcapitalghana" target="_blank" class="corzo-top-bar-social-icon" title="facebook"><i class="fa fa-facebook"></i></a>
+                                        <a href="https://www.linkedin.com/company/constant-capital-ghana-ltd" target="_blank" class="corzo-top-bar-social-icon" title="linkedin"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/ConstantCapGH" target="_blank" class="corzo-top-bar-social-icon" title="twitter"><i class="fa fa-twitter"></i></a>
+                                        <a href="https://www.instagram.com/constantcapitalghana/" target="_blank" class="corzo-top-bar-social-icon" title="instagram"><i class="fa fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -155,9 +164,20 @@
                                             <li class="menu-item menu-item-home menu-item-has-children corzo-normal-menu">
                                                 <a href="index.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
                                             </li>
+<!--                                            -->
+<!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+<!--                                                <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>-->
+<!--                                            </li>-->
+
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>
+                                                <a href="#" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">02</span>Corporate</a>
+                                                <ul class="sub-menu">
+                                                    <li class="menu-item" data-size="60"><a href="about.html">Profile</a></li>
+                                                    <li class="menu-item" data-size="60"><a href="about-team-2.html">Our Board</a></li>
+                                                </ul>
                                             </li>
+                                            
                                             <li class="menu-item current-menu-item current_page_item menu-item-has-children corzo-normal-menu">
                                                 <a href="asset-management.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Services</a>
                                                 <ul class="sub-menu">
