--- a/private-equity-2.html
+++ b/private-equity-2.html
@@ -116,7 +116,7 @@
                                     <div class="corzo-top-bar-right-social">
                                         <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="facebook"><i class="fa fa-facebook"></i></a>
                                         <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="linkedin"><i class="fa fa-linkedin"></i></a>
-                                        <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="pinterest"><i class="fa fa-pinterest-p"></i></a>
+<!--                                        <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="pinterest"><i class="fa fa-pinterest-p"></i></a>-->
                                         <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="twitter"><i class="fa fa-twitter"></i></a>
                                         <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="instagram"><i class="fa fa-instagram"></i></a>
                                     </div>
@@ -157,11 +157,21 @@
                                             <li class="menu-item menu-item-home menu-item-has-children corzo-normal-menu">
                                                 <a href="index.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
                                             </li>
+<!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+<!--                                                <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>-->
+<!--                                            </li>-->
+
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>
+                                                <a href="#" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">02</span>Corporate</a>
+                                                <ul class="sub-menu">
+                                                    <li class="menu-item" data-size="60"><a href="about.html">Profile</a></li>
+                                                    <li class="menu-item" data-size="60"><a href="about-team-2.html">Our Board</a></li>
+                                                </ul>
                                             </li>
+
                                             <li class="menu-item current-menu-item current_page_item menu-item-has-children corzo-normal-menu">
-                                                <a href="asset-management.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Our Services</a>
+                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Our Services</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item" data-size="60"><a href="asset-management.html">Securities Trading</a></li>
                                                     <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
@@ -171,22 +181,29 @@
                                                     <li class="menu-item" data-size="60"><a href="private-equity-2.html">Private Equity</a></li>
                                                 </ul>
                                             </li>
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="images.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
-                                                <ul class="sub-menu">
-                                                    <li class="menu-item"><a href="#">Client Center</a></li>
-                                                    <li class="menu-item"><a href="#">Investment Research</a></li>
-                                                </ul>
-                                            </li>
+                                            <!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+                                            <!--                                                <a href="images.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>-->
+                                            <!--                                                <ul class="sub-menu">-->
+                                            <!--                                                    <li class="menu-item"><a href="#">Client Center</a></li>-->
+                                            <!--                                                    <li class="menu-item"><a href="#">Investment Research</a></li>-->
+                                            <!--                                                </ul>-->
+                                            <!--                                            </li>-->
 
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Contact Us</a>
+                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>Client Center</a>
+                                            </li>
+
+                                            <!--  <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+                                            <!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
+                                            <!--                                            </li>-->
+                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
+                                                <a href="smart-manufacturing.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Research</a>
                                             </li>
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
                                     </div>
                                     <div class="corzo-main-menu-right-wrap clearfix">
-                                        <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Consult</a>
+                                        <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Contact Us</a>
                                     </div>
                                 </div>
                                 <!-- corzo-navigation -->
