--- a/about.html
+++ b/about.html
@@ -71,16 +71,25 @@
                                             <li class="menu-item"><a href="insurance.html">Private Equity</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-item menu-item-has-children">
-                                        <a href="#">Portals</a>
-                                        <ul class="sub-menu">
-                                            <li class="menu-item"><a href="#">Client Center</a></li>
-                                            <li class="menu-item"><a href="#">Investment Research</a></li>
-                                        </ul>
-                                    </li>
 <!--                                    <li class="menu-item menu-item-has-children">-->
+<!--                                        <a href="#">Portals</a>-->
+<!--                                        <ul class="sub-menu">-->
+<!--                                            <li class="menu-item"><a href="#">Client Center</a></li>-->
+<!--                                            <li class="menu-item"><a href="#">Investment Research</a></li>-->
+<!--                                        </ul>-->
+<!--                                    </li>-->
+
+                                    <li class="menu-item menu-item-has-children">
+                                        <a href="faq.html">Client Center</a>
+                                    </li>
+
+                                    <!--    <li class="menu-item menu-item-has-children">-->
 <!--                                        <a href="faq.html">FAQs</a>-->
 <!--                                    </li>-->
+
+                                    <li class="menu-item menu-item-has-children">
+                                        <a href="smart-manufacturing.html">Research</a>
+                                    </li>
 
                                     <li class="menu-item menu-item-has-children">
                                         <a href="contact-3.html">Contact Us</a>
@@ -115,7 +124,6 @@
                                     <div class="corzo-top-bar-right-social">
                                         <a href="https://www.facebook.com/constantcapitalghana" target="_blank" class="corzo-top-bar-social-icon" title="facebook"><i class="fa fa-facebook"></i></a>
                                         <a href="https://www.linkedin.com/company/constant-capital-ghana-ltd" target="_blank" class="corzo-top-bar-social-icon" title="linkedin"><i class="fa fa-linkedin"></i></a>
-                                        <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="pinterest"><i class="fa fa-pinterest-p"></i></a>
                                         <a href="https://twitter.com/ConstantCapGH" target="_blank" class="corzo-top-bar-social-icon" title="twitter"><i class="fa fa-twitter"></i></a>
                                         <a href="https://www.instagram.com/constantcapitalghana/" target="_blank" class="corzo-top-bar-social-icon" title="instagram"><i class="fa fa-instagram"></i></a>
                                     </div>
@@ -159,11 +167,11 @@
                                             </li>
 
                                             <li class="menu-item current-menu-item current_page_item menu-item-has-children corzo-normal-menu">
-                                                <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>
-<!--                                                <ul class="sub-menu">-->
-<!--                                                    <li class="menu-item" data-size="60"><a href="about.html">About Us</a></li>-->
-<!--                                                    <li class="menu-item" data-size="60"><a href="about-team.html">About Team</a></li>-->
-<!--                                                </ul>-->
+                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>
+                                                <ul class="sub-menu">
+                                                    <li class="menu-item" data-size="60"><a href="about.html">Profile</a></li>
+                                                    <li class="menu-item" data-size="60"><a href="about-team.html">Our Board</a></li>
+                                                </ul>
                                             </li>
 
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
@@ -178,31 +186,31 @@
                                                 </ul>
                                             </li>
 
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre">
-                                                    <span class="corzo-menu-item-description">04</span>Portals</a>
-                                                <ul class="sub-menu">
-                                                    <li class="menu-item"><a href="#">Client Center</a></li>
-                                                    <li class="menu-item"><a href="#">Investment Research</a></li>
-                                                </ul>
-                                            </li>
+<!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+<!--                                                <a href="#" class="sf-with-ul-pre">-->
+<!--                                                    <span class="corzo-menu-item-description">04</span>Portals</a>-->
+<!--                                                <ul class="sub-menu">-->
+<!--                                                    <li class="menu-item"><a href="#">Client Center</a></li>-->
+<!--                                                    <li class="menu-item"><a href="#">Investment Research</a></li>-->
+<!--                                                </ul>-->
+<!--                                            </li>-->
 
-                                            <!-- <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Research</a>
-                                            </li> -->
+                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
+                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Client Center</a>
+                                            </li>
 <!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
 <!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
 <!--                                            </li>-->
 
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Contact Us</a>
+                                                <a href="smart-manufacturing.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>Research</a>
                                             </li>
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
                                     </div>
 
                                     <div class="corzo-main-menu-right-wrap clearfix">
-                                    <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Consult</a>
+                                    <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Consult us</a>
                                 </div>
 
                                 </div>
@@ -307,9 +315,8 @@
 
 
 
-
                         <!--                                    column-->
-                        <div class="gdlr-core-pbf-column gdlr-core-column-40 gdlr-core-column-first">
+                        <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
                             <div class="gdlr-core-pbf-column-content-margin gdlr-core-js" style="padding: 0px 20px 0px 0px; ">
                                 <div class="gdlr-core-pbf-background-wrap"></div>
 
@@ -335,7 +342,7 @@
                             </div>
                         </div>
 
-                        <div class="gdlr-core-pbf-column gdlr-core-column-20">
+                        <div class="gdlr-core-pbf-column gdlr-core-column-30">
                             <div class="gdlr-core-pbf-column-content-margin gdlr-core-js" style="padding: 0px 20px 0px 0px; text-align: justify;">
                                 <div class="gdlr-core-pbf-background-wrap"></div>
                                 <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js">
@@ -732,7 +739,7 @@
                                                                         <a href="about-team.html">Kofi Apenteng</a>
                                                                     </h3>
                                                                     <div class="gdlr-core-personnel-list-position gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 17px; font-weight: 500; font-style: normal; letter-spacing: 0px;">
-                                                                        Non-Executive Director
+                                                                        Director
                                                                     </div>
                                                                     <div class="gdlr-core-personnel-list-social">
 <!--                                                                        <div class="gdlr-core-social-network-item gdlr-core-item-pdb gdlr-core-none-align" style="padding-bottom: 0px;">-->
@@ -769,7 +776,7 @@
                                                                             class="gdlr-core-personnel-list-position gdlr-core-info-font gdlr-core-skin-caption"
                                                                             style="font-size: 17px; font-weight: 500; font-style: normal; letter-spacing: 0px;"
                                                                     >
-                                                                        Non-Executive Director
+                                                                        Director
 
                                                                     </div>
 <!--                                                                    <div class="gdlr-core-personnel-list-social">-->
@@ -809,7 +816,7 @@
                                                                             class="gdlr-core-personnel-list-position gdlr-core-info-font gdlr-core-skin-caption"
                                                                             style="font-size: 17px; font-weight: 500; font-style: normal; letter-spacing: 0px;"
                                                                     >
-                                                                        Non-Executive Director
+                                                                        Director
                                                                     </div>
 <!--                                                                    <div class="gdlr-core-personnel-list-social">-->
 <!--                                                                        <div class="gdlr-core-social-network-item gdlr-core-item-pdb gdlr-core-none-align" style="padding-bottom: 0px;">-->
