--- a/faq.html
+++ b/faq.html
@@ -72,15 +72,17 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="blog-full-both-sidebar-with-frame.html">Research</a>
+                                        <a href="">Client Center</a>
 
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="faq.html">FAQs</a>
-
+                                        <a href="faq.html">Research</a>
                                     </li>
+<!--                                    <li class="menu-item menu-item-has-children">-->
+<!--                                        <a href="faq.html">FAQs</a>-->
+<!--                                    </li>-->
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="contact-3.html">Support</a>
+                                        <a href="contact-3.html">Contact Us</a>
                                     </li>
                                 </ul>
                             </div>
@@ -111,7 +113,7 @@
                                     <div class="corzo-top-bar-right-social">
                                         <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="facebook"><i class="fa fa-facebook"></i></a>
                                         <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="linkedin"><i class="fa fa-linkedin"></i></a>
-                                        <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="pinterest"><i class="fa fa-pinterest-p"></i></a>
+<!--                                        <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="pinterest"><i class="fa fa-pinterest-p"></i></a>-->
                                         <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="twitter"><i class="fa fa-twitter"></i></a>
                                         <a href="#" target="_blank" class="corzo-top-bar-social-icon" title="instagram"><i class="fa fa-instagram"></i></a>
                                     </div>
@@ -169,22 +171,23 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item current-menu-item current_page_item menu-item-has-children corzo-normal-menu">
-                                                <a href="blog-full-both-sidebar-with-frame.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Research</a>
+                                                <a href="blog-full-both-sidebar-with-frame.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">04</span>Client Center</a>
 
                                             </li>
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQ</a>
+<!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+<!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQ</a>-->
 
-                                            </li>
+<!--                                            </li>-->
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Support</a>
+                                                <a href="smart-manufacturing.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Research</a>
 
                                             </li>
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
                                     </div>
                                     <div class="corzo-main-menu-right-wrap clearfix">
-                                        <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Get Broker</a>
+                                        <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Contact Us</a>
                                     </div>
                                 </div>
                                 <!-- corzo-navigation -->
