--- a/team-profile-kofi.html
+++ b/team-profile-kofi.html
@@ -270,20 +270,20 @@
               <div class="corzo-logo-inner">
                 <a class="corzo-fixed-nav-logo" href="index.html">
                   <img
-                          src="upload/logox1.png"
-                          alt=""
-                          width="123"
-                          height="31"
-                          title="logox1"
+                        src="upload/logox1.png"
+                        alt=""
+                        width="123"
+                        height="31"
+                        title="logox1"
                   />
                 </a>
                 <a class="corzo-orig-logo" href="index.html">
                   <img
-                          src="upload/logox1.png"
-                          alt=""
-                          width="123"
-                          height="31"
-                          title="logox1"
+                        src="upload/logox1.png"
+                        alt=""
+                        width="123"
+                        height="31"
+                        title="logox1"
                   />
                 </a>
               </div>
@@ -291,51 +291,56 @@
             <div class="corzo-navigation corzo-item-pdlr clearfix">
               <div class="corzo-main-menu" id="corzo-main-menu">
                 <ul id="menu-main-navigation-1" class="sf-menu">
-                  <li
-                          class="menu-item menu-item-home menu-item-has-children corzo-normal-menu"
-                  >
-                    <a href="index.html" class="sf-with-ul-pre">
-                      <span class="corzo-menu-item-description">01</span>Home</a>
+                  <li class="menu-item menu-item-home menu-item-has-children corzo-normal-menu">
+                    <a href="index.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
+                  </li>
+<!--                  <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+<!--                      <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>-->
+<!--                  </li>-->
 
-                  </li>
-                  <li class="menu-item current-menu-item current_page_item menu-item-has-children corzo-normal-menu">
-                    <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>
-                    <!--                                                <ul class="sub-menu">-->
-                    <!--                                                    <li class="menu-item" data-size="60"><a href="about.html">About Us</a></li>-->
-                    <!--                                                    <li class="menu-item" data-size="60"><a href="about-team.html">About Team</a></li>-->
-                    <!--                                                </ul>-->
-                  </li>
                   <li class="menu-item menu-item-has-children corzo-normal-menu">
-                    <a href="asset-management.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Services</a>
+                    <a href="about.html" class="sf-with-ul-pre">
+                      <span class="corzo-menu-item-description">02</span>Corporate</a>
+                    <ul class="sub-menu">
+                      <li class="menu-item" data-size="60"><a href="about.html">Profile</a></li>
+                      <li class="menu-item" data-size="60"><a href="about-team-2.html">Our Board</a></li>
+                    </ul>
+                  </li>
+
+                  <li class="menu-item current-menu-item current_page_item menu-item-has-children corzo-normal-menu">
+                    <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Our Services</a>
                     <ul class="sub-menu">
                       <li class="menu-item" data-size="60"><a href="asset-management.html">Securities Trading</a></li>
-                      <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Financings &amp; Capital Market</a></li>
+                      <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
                       <li class="menu-item" data-size="60"><a href="smart-manufacturing.html">Investment Research</a></li>
                       <li class="menu-item" data-size="60"><a href="risk-management.html">Investment Advisory</a></li>
                       <li class="menu-item" data-size="60"><a href="insurance.html">Strategic Advisory</a></li>
                       <li class="menu-item" data-size="60"><a href="private-equity-2.html">Private Equity</a></li>
+                    </ul>
+                  </li>
+                  <!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+                  <!--                                                <a href="#" class="sf-with-ul-pre">-->
+                  <!--                                                    <span class="corzo-menu-item-description">04</span>Portals</a>-->
+                  <!--                                                <ul class="sub-menu">-->
+                  <!--                                                    <li class="menu-item"><a href="#">Client Center</a></li>-->
+                  <!--                                                    <li class="menu-item"><a href="#">Investment Research</a></li>-->
+                  <!--                                                </ul>-->
+                  <!--                                            </li>-->
+                  <li class="menu-item menu-item-has-children corzo-normal-menu">
+                    <a href="" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>Client Center</a>
+                  </li>
+                  <!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+                  <!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
+                  <!--                                            </li>-->
+                  <li class="menu-item menu-item-has-children corzo-normal-menu">
+                    <a href="smart-manufacturing.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Research<a>
 
-                    </ul>
-                  </li>
-                  <li class="menu-item menu-item-has-children corzo-normal-menu">
-                    <a href="#" class="sf-with-ul-pre"><span
-                            class="corzo-menu-item-description">04</span>Portal</a>
-                    <ul class="sub-menu">
-                      <li class="menu-item"><a href="#">Client Center</a></li>
-                      <li class="menu-item"><a href="#">Investment Research</a></li>
-                    </ul>
-                  </li>
-<!--                  <li class="menu-item menu-item-has-children corzo-normal-menu">-->
-<!--                    <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
-<!--                  </li>-->
-                  <li class="menu-item menu-item-has-children corzo-normal-menu">
-                    <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Contact Us </a>
                   </li>
                 </ul>
                 <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
               </div>
               <div class="corzo-main-menu-right-wrap clearfix">
-                <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Consult</a>
+                <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Contact Us</a>
               </div>
             </div>
             <!-- corzo-navigation -->
