--- a/smart-manufacturing.html
+++ b/smart-manufacturing.html
@@ -55,11 +55,9 @@
                                 <ul id="menu-main-navigation" class="m-menu">
                                     <li class="menu-item menu-item-home menu-item-has-children">
                                         <a href="index.html" aria-current="page">Home</a>
-
                                     </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="about.html">Corporate Profile</a>
-
                                     </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="asset-management.html">Our Services</a>
@@ -82,6 +80,10 @@
 <!--                                    </li>-->
 
                                     <li class="menu-item menu-item-has-children">
+                                        <a href="smart-manufacturing.html">Research Center</a>
+                                    </li>
+
+                                    <li class="menu-item menu-item-has-children">
                                         <a href="#">Client Center</a>
                                     </li>
 
@@ -89,9 +91,7 @@
 <!--                                        <a href="faq.html">FAQs</a>-->
 <!--                                    </li>-->
 
-                                    <li class="menu-item menu-item-has-children">
-                                        <a href="smart-manufacturing.html">Research</a>
-                                    </li>
+
 
                                 </ul>
                             </div>
@@ -194,7 +194,7 @@
 <!--                                                </ul>-->
 <!--                                            </li>-->
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>Client Center</a>
+                                                <a href="client-center.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>Client Center</a>
                                             </li>
 <!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
 <!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
