--- a/risk-management.html
+++ b/risk-management.html
@@ -79,12 +79,14 @@
 <!--                                            <li class="menu-item"><a href="#">Investment Research</a></li>-->
 <!--                                        </ul>-->
 <!--                                    </li>-->
+
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="#">Client Center</a>
+                                        <a href="smart-manufacturing.html">Research Center</a>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="#">Research</a>
+                                        <a href="client-center.html">Client Center</a>
                                     </li>
+
 
 <!--                                    <li class="menu-item menu-item-has-children">-->
 <!--                                        <a href="faq.html">FAQs</a>-->
@@ -198,19 +200,19 @@
 <!--                                                </ul>-->
 <!--                                            </li>-->
 
-
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="" class="sf-with-ul-pre">
-                                                    <span class="corzo-menu-item-description">05</span>Client Center</a>
-
+                                                <a href="smart-manufacturing.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Research Center</a>
                                             </li>
+                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
+                                                <a href="client-center.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">05</span>Client Center
+                                                </a>
+                                            </li>
+
                                             <!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
 <!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
 
 <!--                                            </li>-->
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Research</a>
-                                            </li>
 
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
@@ -522,13 +524,13 @@
                                             <div class="gdlr-core-pbf-background-wrap"></div>
 
                                             <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js">
-                                                <div class="gdlr-core-pbf-element">
-                                                    <div class="gdlr-core-image-item gdlr-core-item-pdb gdlr-core-left-align gdlr-core-item-pdlr" style="padding-bottom: 28px;">
-                                                        <div class="gdlr-core-image-item-wrap gdlr-core-media-image gdlr-core-image-item-style-rectangle" style="border-width: 0px; max-width: 73px;">
-                                                            <img src="upload/icon01.png" alt="" width="155" height="155" title="icon01" />
-                                                        </div>
-                                                    </div>
-                                                </div>
+<!--                                                <div class="gdlr-core-pbf-element">-->
+<!--                                                    <div class="gdlr-core-image-item gdlr-core-item-pdb gdlr-core-left-align gdlr-core-item-pdlr" style="padding-bottom: 28px;">-->
+<!--                                                        <div class="gdlr-core-image-item-wrap gdlr-core-media-image gdlr-core-image-item-style-rectangle" style="border-width: 0px; max-width: 73px;">-->
+<!--                                                            <img src="upload/icon01.png" alt="" width="155" height="155" title="icon01" />-->
+<!--                                                        </div>-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
 
                                                 <div class="gdlr-core-pbf-element">
                                                     <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 15px;">
@@ -553,31 +555,14 @@
                                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js">
                                             <div class="gdlr-core-pbf-background-wrap"></div>
                                             <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js">
-                                                <div class="gdlr-core-pbf-element">
-                                                    <div class="gdlr-core-image-item gdlr-core-item-pdb gdlr-core-left-align gdlr-core-item-pdlr" style="padding-bottom: 28px;">
-                                                        <div class="gdlr-core-image-item-wrap gdlr-core-media-image gdlr-core-image-item-style-rectangle" style="border-width: 0px; max-width: 73px;">
-                                                            <img src="upload/icon02.png" alt="" width="155" height="155" title="icon02" />
-                                                        </div>
-                                                    </div>
-                                                </div>
 
-<!--                                                <div class="gdlr-core-pbf-element">-->
-<!--                                                    <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 25px;">-->
-<!--                                                        <div class="gdlr-core-title-item-title-wrap">-->
-<!--                                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #222222;">-->
-<!--                                                                <span class="gdlr-core-title-item-left-dot" style="width: 5px; height: 5px; background-color: #f7821e; margin-right: 11px;"></span>Investment Strategy-->
-<!--                                                                <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>-->
-<!--                                                            </h3>-->
-<!--                                                        </div>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
 
                                                 <div class="gdlr-core-pbf-element">
                                                     <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 15px;">
                                                         <div class="gdlr-core-text-box-item-content" style="font-size: 18px; font-weight: 400; letter-spacing: 0px; text-transform: none; color: #6c6c6c;">
                                                             <p>
-                                                                Our capital management policies and our advisory inclinations are guided by capital preservation and our priorities for clients
-                                                                revolve around safety, liquidity, and return.
+                                                                Our capital management policies and our advisory inclinations are guided by capital preservation
+                                                                and our priorities for clients.
                                                             </p>
                                                         </div>
                                                     </div>
